# PyRoomAcoustics

./: .env_sample  .gitignore  All_BF.py  Dockerfile  Generate_IR.py  Generate_conditions.py  README.md  create_audio_paths_csv.py  create_dataset.py  create_rir.py  delay_signal.py  gpuRIR.py  nantonaku.py  new_signal_noise.py  plot_room.py  process_audio2.py  process_audio_from_csv.py  pyproject.toml  rec_IR.py  rec_condition.py  rec_config.py  rec_signal_noise.py  rec_signal_only.py  rec_utility.py  requirements.txt  run_random_rec_sample.py  sample_IR.py  setup.py
Doc/: RoomClass.md  config.md  config_management.md  design_philosophy.md  dir.txt  fix.md  recodingout.yml  リポジトリ構成案.md  会話ログ.md
Reverb_Encoder/: config_generate_reverb_features.py  generate_reverb_features.py  計画.md
archive/: All_BF.py  create_audio_paths_csv.py  fast_create_audio_path.py  plot_room.py  precompute_room_params.py  process_audio2.py  rec.py  rec_script.py
config/: README.md  config.yaml  config_domain.json  dataset_config.yaml  dataset_v1.yml  signal_sample.py
legacy/: precompute_room_params.py  rec2.py  rec_script.py
mymodule/: config.py  const.py  my_func.py  my_func2.py  rec_config.py  rec_utility.py  reverbe_feater.py  separate_ConvTasNet.py
project/: __init__.py
scripts/: All_BF.py  Generate_IR.py  create_audio_paths.py  create_audio_paths_csv.py  create_dataset_csv.py  generate_dataset.py  generate_rirs.py  nantonaku.py  new_signal_noise.py  plot_room.py  precompute_room_params.py  process_audio2.py  rec_script.py  resample_dataset.py  sample_IR.py
src/: rec_utility.py  (+2 more)
(+24 files in other folders)
